chap5/tiger.grm
%{
#include <stdio.h>
#include "util.h"
#include "symbol.h"
#include "errormsg.h"
#include "absyn.h"

int yylex(void);

A_exp absyn_root;

void yyerror(char *s)
{
  EM_error(EM_tokPos, "%s", s);
}

struct LvalTail_;
typedef struct LvalTail_ *LvalTail;

struct LvalTail_ {
  int kind;               /* 0 = field, 1 = subscript */
  string field;
  A_exp index;
  LvalTail next;
};

static LvalTail makeFieldTail(string field, LvalTail next)
{
  LvalTail t = checked_malloc(sizeof(*t));
  t->kind = 0;
  t->field = field;
  t->index = NULL;
  t->next = next;
  return t;
}

static LvalTail makeSubscriptTail(A_exp index, LvalTail next)
{
  LvalTail t = checked_malloc(sizeof(*t));
  t->kind = 1;
  t->field = NULL;
  t->index = index;
  t->next = next;
  return t;
}

static A_var foldLvalue(string id, LvalTail tail)
{
  A_var v = A_SimpleVar(EM_tokPos, S_Symbol(id));
  for (; tail; tail = tail->next) {
    if (tail->kind == 0)
      v = A_FieldVar(EM_tokPos, v, S_Symbol(tail->field));
    else
      v = A_SubscriptVar(EM_tokPos, v, tail->index);
  }
  return v;
}

static A_expList appendExpList(A_expList xs, A_exp x)
{
  A_expList p;
  if (!xs) return A_ExpList(x, NULL);
  for (p = xs; p->tail; p = p->tail) {}
  p->tail = A_ExpList(x, NULL);
  return xs;
}

static A_decList appendDecList(A_decList xs, A_dec x)
{
  A_decList p;
  if (!xs) return A_DecList(x, NULL);
  for (p = xs; p->tail; p = p->tail) {}
  p->tail = A_DecList(x, NULL);
  return xs;
}

static A_efieldList appendEfieldList(A_efieldList xs, A_efield x)
{
  A_efieldList p;
  if (!xs) return A_EfieldList(x, NULL);
  for (p = xs; p->tail; p = p->tail) {}
  p->tail = A_EfieldList(x, NULL);
  return xs;
}

static A_fieldList appendFieldList(A_fieldList xs, A_field x)
{
  A_fieldList p;
  if (!xs) return A_FieldList(x, NULL);
  for (p = xs; p->tail; p = p->tail) {}
  p->tail = A_FieldList(x, NULL);
  return xs;
}
%}

%union {
  int           pos;
  int           ival;
  string        sval;
  A_var         var;
  A_exp         exp;
  A_dec         dec;
  A_ty          ty;
  A_decList     dec_list;
  A_expList     exp_list;
  A_field       field;
  A_fieldList   field_list;
  A_fundec      fundec;
  A_fundecList  fundec_list;
  A_namety      namety;
  A_nametyList  namety_list;
  A_efield      efield;
  A_efieldList  efield_list;
  struct LvalTail_ *lvalue_tail;
}

%token <sval> ID STRING
%token <ival> INT

%token
 COMMA COLON SEMICOLON LPAREN RPAREN LBRACK RBRACK
 LBRACE RBRACE DOT
 PLUS MINUS TIMES DIVIDE EQ NEQ LT LE GT GE
 AND OR ASSIGN
 ARRAY IF THEN ELSE WHILE FOR TO DO LET IN END OF
 BREAK NIL
 FUNCTION VAR TYPE

%type <exp> program exp assignexp orexp andexp relexp addexp mulexp unaryexp atomexp idexp

%type <var> lvalue
%type <lvalue_tail> lvaluetail

%type <exp_list> explist_opt explist args_opt args

%type <efield> recfield
%type <efield_list> recfields_opt recfields

%type <dec> dec vardec typedecs fundecs
%type <dec_list> decs_opt decs

%type <namety> typedec
%type <fundec> fundec

%type <ty> ty

%type <field> tyfield
%type <field_list> tyfields_opt tyfields

%left OR
%left AND
%nonassoc EQ NEQ LT LE GT GE
%left PLUS MINUS
%left TIMES DIVIDE
%right UMINUS
%nonassoc IFX
%nonassoc ELSE
%debug
%start program

%%

program:
 exp
 { absyn_root = $1; $$ = $1; }
 ;

exp:
 assignexp
 { $$ = $1; }
 ;

assignexp:
 lvalue ASSIGN assignexp
 { $$ = A_AssignExp(EM_tokPos, $1, $3); }
 | orexp
 { $$ = $1; }
 ;

orexp:
 orexp OR andexp
 { $$ = A_IfExp(EM_tokPos, $1, A_IntExp(EM_tokPos, 1), $3); }
 | andexp
 { $$ = $1; }
 ;

andexp:
 andexp AND relexp
 { $$ = A_IfExp(EM_tokPos, $1, $3, A_IntExp(EM_tokPos, 0)); }
 | relexp
 { $$ = $1; }
 ;

relexp:
 addexp
 { $$ = $1; }
 | addexp EQ addexp
 { $$ = A_OpExp(EM_tokPos, A_eqOp, $1, $3); }
 | addexp NEQ addexp
 { $$ = A_OpExp(EM_tokPos, A_neqOp, $1, $3); }
 | addexp LT addexp
 { $$ = A_OpExp(EM_tokPos, A_ltOp, $1, $3); }
 | addexp LE addexp
 { $$ = A_OpExp(EM_tokPos, A_leOp, $1, $3); }
 | addexp GT addexp
 { $$ = A_OpExp(EM_tokPos, A_gtOp, $1, $3); }
 | addexp GE addexp
 { $$ = A_OpExp(EM_tokPos, A_geOp, $1, $3); }
 ;

addexp:
 addexp PLUS mulexp
 { $$ = A_OpExp(EM_tokPos, A_plusOp, $1, $3); }
 | addexp MINUS mulexp
 { $$ = A_OpExp(EM_tokPos, A_minusOp, $1, $3); }
 | mulexp
 { $$ = $1; }
 ;

mulexp:
 mulexp TIMES unaryexp
 { $$ = A_OpExp(EM_tokPos, A_timesOp, $1, $3); }
 | mulexp DIVIDE unaryexp
 { $$ = A_OpExp(EM_tokPos, A_divideOp, $1, $3); }
 | unaryexp
 { $$ = $1; }
 ;

unaryexp:
 MINUS unaryexp %prec UMINUS
 { $$ = A_OpExp(EM_tokPos, A_minusOp, A_IntExp(EM_tokPos, 0), $2); }
 | atomexp
 { $$ = $1; }
 ;

atomexp:
 NIL
 { $$ = A_NilExp(EM_tokPos); }
 | INT
 { $$ = A_IntExp(EM_tokPos, $1); }
 | STRING
 { $$ = A_StringExp(EM_tokPos, $1); }
 | BREAK
 { $$ = A_BreakExp(EM_tokPos); }
 | LPAREN explist_opt RPAREN
 { $$ = A_SeqExp(EM_tokPos, $2); }
 | idexp
 { $$ = $1; }
 | IF exp THEN exp %prec IFX
 { $$ = A_IfExp(EM_tokPos, $2, $4, NULL); }
 | IF exp THEN exp ELSE exp
 { $$ = A_IfExp(EM_tokPos, $2, $4, $6); }
 | WHILE exp DO exp
 { $$ = A_WhileExp(EM_tokPos, $2, $4); }
 | FOR ID ASSIGN exp TO exp DO exp
 { $$ = A_ForExp(EM_tokPos, S_Symbol($2), $4, $6, $8); }
 | LET decs_opt IN explist_opt END
 { $$ = A_LetExp(EM_tokPos, $2, A_SeqExp(EM_tokPos, $4)); }
 ;

idexp:
 lvalue
 { $$ = A_VarExp(EM_tokPos, $1); }
 | ID LPAREN args_opt RPAREN
 { $$ = A_CallExp(EM_tokPos, S_Symbol($1), $3); }
 | ID LBRACE recfields_opt RBRACE
 { $$ = A_RecordExp(EM_tokPos, S_Symbol($1), $3); }
 | ID LBRACK exp RBRACK OF exp
 { $$ = A_ArrayExp(EM_tokPos, S_Symbol($1), $3, $6); }
 ;

lvalue:
 ID lvaluetail
 { $$ = foldLvalue($1, $2); }
 ;

lvaluetail:
 /* empty */
 { $$ = NULL; }
 | DOT ID lvaluetail
 { $$ = makeFieldTail($2, $3); }
 | LBRACK exp RBRACK lvaluetail
 { $$ = makeSubscriptTail($2, $4); }
 ;

explist_opt:
 /* empty */
 { $$ = NULL; }
 | explist
 { $$ = $1; }
 ;

explist:
 exp
 { $$ = A_ExpList($1, NULL); }
 | explist SEMICOLON exp
 { $$ = appendExpList($1, $3); }
 ;

args_opt:
 /* empty */
 { $$ = NULL; }
 | args
 { $$ = $1; }
 ;

args:
 exp
 { $$ = A_ExpList($1, NULL); }
 | args COMMA exp
 { $$ = appendExpList($1, $3); }
 ;

recfields_opt:
 /* empty */
 { $$ = NULL; }
 | recfields
 { $$ = $1; }
 ;

recfields:
 recfield
 { $$ = A_EfieldList($1, NULL); }
 | recfields COMMA recfield
 { $$ = appendEfieldList($1, $3); }
 ;

recfield:
 ID EQ exp
 { $$ = A_Efield(S_Symbol($1), $3); }
 ;

decs_opt:
 /* empty */
 { $$ = NULL; }
 | decs
 { $$ = $1; }
 ;

decs:
 dec
 { $$ = A_DecList($1, NULL); }
 | decs dec
 { $$ = appendDecList($1, $2); }
 ;

dec:
 typedecs
 { $$ = $1; }
 | vardec
 { $$ = $1; }
 | fundecs
 { $$ = $1; }
 ;

typedecs:
 typedec
 { $$ = A_TypeDec(EM_tokPos, A_NametyList($1, NULL)); }
 | typedec typedecs
 {
   A_dec d = $2;
   $$ = A_TypeDec(EM_tokPos, A_NametyList($1, d->u.type));
 }
 ;

fundecs:
 fundec
 { $$ = A_FunctionDec(EM_tokPos, A_FundecList($1, NULL)); }
 | fundec fundecs
 {
   A_dec d = $2;
   $$ = A_FunctionDec(EM_tokPos, A_FundecList($1, d->u.function));
 }
 ;

typedec:
 TYPE ID EQ ty
 { $$ = A_Namety(S_Symbol($2), $4); }
 ;

vardec:
 VAR ID ASSIGN exp
 { $$ = A_VarDec(EM_tokPos, S_Symbol($2), NULL, $4); }
 | VAR ID COLON ID ASSIGN exp
 { $$ = A_VarDec(EM_tokPos, S_Symbol($2), S_Symbol($4), $6); }
 ;

fundec:
 FUNCTION ID LPAREN tyfields_opt RPAREN EQ exp
 { $$ = A_Fundec(EM_tokPos, S_Symbol($2), $4, NULL, $7); }
 | FUNCTION ID LPAREN tyfields_opt RPAREN COLON ID EQ exp
 { $$ = A_Fundec(EM_tokPos, S_Symbol($2), $4, S_Symbol($7), $9); }
 ;

ty:
 ID
 { $$ = A_NameTy(EM_tokPos, S_Symbol($1)); }
 | LBRACE tyfields_opt RBRACE
 { $$ = A_RecordTy(EM_tokPos, $2); }
 | ARRAY OF ID
 { $$ = A_ArrayTy(EM_tokPos, S_Symbol($3)); }
 ;

tyfields_opt:
 /* empty */
 { $$ = NULL; }
 | tyfields
 { $$ = $1; }
 ;

tyfields:
 tyfield
 { $$ = A_FieldList($1, NULL); }
 | tyfields COMMA tyfield
 { $$ = appendFieldList($1, $3); }
 ;

tyfield:
 ID COLON ID
 { $$ = A_Field(EM_tokPos, S_Symbol($1), S_Symbol($3)); }
 ;

%%
