chap4/y.output
State 15 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 18 conflicts: 8 shift/reduce
State 19 conflicts: 2 shift/reduce
State 45 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: assignexp

    3 assignexp: lvalue ASSIGN assignexp
    4          | orexp

    5 orexp: orexp OR andexp
    6      | andexp

    7 andexp: andexp AND relexp
    8       | relexp

    9 relexp: addexp
   10       | addexp EQ addexp
   11       | addexp NEQ addexp
   12       | addexp LT addexp
   13       | addexp LE addexp
   14       | addexp GT addexp
   15       | addexp GE addexp

   16 addexp: addexp PLUS mulexp
   17       | addexp MINUS mulexp
   18       | mulexp

   19 mulexp: mulexp TIMES unaryexp
   20       | mulexp DIVIDE unaryexp
   21       | unaryexp

   22 unaryexp: MINUS unaryexp
   23         | atomexp

   24 atomexp: NIL
   25        | INT
   26        | STRING
   27        | BREAK
   28        | LPAREN explist_opt RPAREN
   29        | idexp
   30        | IF exp THEN exp
   31        | IF exp THEN exp ELSE exp
   32        | WHILE exp DO exp
   33        | FOR ID ASSIGN exp TO exp DO exp
   34        | LET decs_opt IN explist_opt END

   35 idexp: lvalue
   36      | ID LPAREN args_opt RPAREN
   37      | ID LBRACE recfields_opt RBRACE
   38      | ID LBRACK exp RBRACK OF exp

   39 lvalue: ID lvaluetail

   40 lvaluetail: /* empty */
   41           | DOT ID lvaluetail
   42           | LBRACK exp RBRACK lvaluetail

   43 explist_opt: /* empty */
   44            | explist

   45 explist: exp
   46        | explist SEMICOLON exp

   47 args_opt: /* empty */
   48         | args

   49 args: exp
   50     | args COMMA exp

   51 recfields_opt: /* empty */
   52              | recfields

   53 recfields: recfield
   54          | recfields COMMA recfield

   55 recfield: ID EQ exp

   56 decs_opt: /* empty */
   57         | decs

   58 decs: dec
   59     | decs dec

   60 dec: typedecs
   61    | vardec
   62    | fundecs

   63 typedecs: typedec
   64         | typedec typedecs

   65 fundecs: fundec
   66        | fundec fundecs

   67 typedec: TYPE ID EQ ty

   68 vardec: VAR ID ASSIGN exp
   69       | VAR ID COLON ID ASSIGN exp

   70 fundec: FUNCTION ID LPAREN tyfields_opt RPAREN EQ exp
   71       | FUNCTION ID LPAREN tyfields_opt RPAREN COLON ID EQ exp

   72 ty: ID
   73   | LBRACE tyfields_opt RBRACE
   74   | ARRAY OF ID

   75 tyfields_opt: /* empty */
   76             | tyfields

   77 tyfields: tyfield
   78         | tyfields COMMA tyfield

   79 tyfield: ID COLON ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 33 36 37 38 39 41 55 67 68 69 70 71 72 74 79
STRING (259) 26
INT (260) 25
COMMA (261) 50 54 78
COLON (262) 69 71 79
SEMICOLON (263) 46
LPAREN (264) 28 36 70 71
RPAREN (265) 28 36 70 71
LBRACK (266) 38 42
RBRACK (267) 38 42
LBRACE (268) 37 73
RBRACE (269) 37 73
DOT (270) 41
PLUS (271) 16
MINUS (272) 17 22
TIMES (273) 19
DIVIDE (274) 20
EQ (275) 10 55 67 70 71
NEQ (276) 11
LT (277) 12
LE (278) 13
GT (279) 14
GE (280) 15
AND (281) 7
OR (282) 5
ASSIGN (283) 3 33 68 69
ARRAY (284) 74
IF (285) 30 31
THEN (286) 30 31
ELSE (287) 31
WHILE (288) 32
FOR (289) 33
TO (290) 33
DO (291) 32 33
LET (292) 34
IN (293) 34
END (294) 34
OF (295) 38 74
BREAK (296) 27
NIL (297) 24
FUNCTION (298) 70 71
VAR (299) 68 69
TYPE (300) 67
UMINUS (301)
IFX (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
exp (50)
    on left: 2, on right: 1 30 31 32 33 38 42 45 46 49 50 55 68 69
    70 71
assignexp (51)
    on left: 3 4, on right: 2 3
orexp (52)
    on left: 5 6, on right: 4 5
andexp (53)
    on left: 7 8, on right: 5 6 7
relexp (54)
    on left: 9 10 11 12 13 14 15, on right: 7 8
addexp (55)
    on left: 16 17 18, on right: 9 10 11 12 13 14 15 16 17
mulexp (56)
    on left: 19 20 21, on right: 16 17 18 19 20
unaryexp (57)
    on left: 22 23, on right: 19 20 21 22
atomexp (58)
    on left: 24 25 26 27 28 29 30 31 32 33 34, on right: 23
idexp (59)
    on left: 35 36 37 38, on right: 29
lvalue (60)
    on left: 39, on right: 3 35
lvaluetail (61)
    on left: 40 41 42, on right: 39 41 42
explist_opt (62)
    on left: 43 44, on right: 28 34
explist (63)
    on left: 45 46, on right: 44 46
args_opt (64)
    on left: 47 48, on right: 36
args (65)
    on left: 49 50, on right: 48 50
recfields_opt (66)
    on left: 51 52, on right: 37
recfields (67)
    on left: 53 54, on right: 52 54
recfield (68)
    on left: 55, on right: 53 54
decs_opt (69)
    on left: 56 57, on right: 34
decs (70)
    on left: 58 59, on right: 57 59
dec (71)
    on left: 60 61 62, on right: 58 59
typedecs (72)
    on left: 63 64, on right: 60 64
fundecs (73)
    on left: 65 66, on right: 62 66
typedec (74)
    on left: 67, on right: 63 64
vardec (75)
    on left: 68 69, on right: 61
fundec (76)
    on left: 70 71, on right: 65 66
ty (77)
    on left: 72 73 74, on right: 67
tyfields_opt (78)
    on left: 75 76, on right: 70 71 73
tyfields (79)
    on left: 77 78, on right: 76 78
tyfield (80)
    on left: 79, on right: 77 78


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program    go to state 12
    exp        go to state 13
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 1

   36 idexp: ID . LPAREN args_opt RPAREN
   37      | ID . LBRACE recfields_opt RBRACE
   38      | ID . LBRACK exp RBRACK OF exp
   39 lvalue: ID . lvaluetail

    LPAREN  shift, and go to state 24
    LBRACK  shift, and go to state 25
    LBRACE  shift, and go to state 26
    DOT     shift, and go to state 27

    $default  reduce using rule 40 (lvaluetail)

    lvaluetail  go to state 28


state 2

   26 atomexp: STRING .

    $default  reduce using rule 26 (atomexp)


state 3

   25 atomexp: INT .

    $default  reduce using rule 25 (atomexp)


state 4

   28 atomexp: LPAREN . explist_opt RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 43 (explist_opt)

    exp          go to state 29
    assignexp    go to state 14
    orexp        go to state 15
    andexp       go to state 16
    relexp       go to state 17
    addexp       go to state 18
    mulexp       go to state 19
    unaryexp     go to state 20
    atomexp      go to state 21
    idexp        go to state 22
    lvalue       go to state 23
    explist_opt  go to state 30
    explist      go to state 31


state 5

   22 unaryexp: MINUS . unaryexp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    unaryexp  go to state 32
    atomexp   go to state 21
    idexp     go to state 22
    lvalue    go to state 33


state 6

   30 atomexp: IF . exp THEN exp
   31        | IF . exp THEN exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 34
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 7

   32 atomexp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 35
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 8

   33 atomexp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 36


state 9

   34 atomexp: LET . decs_opt IN explist_opt END

    FUNCTION  shift, and go to state 37
    VAR       shift, and go to state 38
    TYPE      shift, and go to state 39

    $default  reduce using rule 56 (decs_opt)

    decs_opt  go to state 40
    decs      go to state 41
    dec       go to state 42
    typedecs  go to state 43
    fundecs   go to state 44
    typedec   go to state 45
    vardec    go to state 46
    fundec    go to state 47


state 10

   27 atomexp: BREAK .

    $default  reduce using rule 27 (atomexp)


state 11

   24 atomexp: NIL .

    $default  reduce using rule 24 (atomexp)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 48


state 13

    1 program: exp .

    $default  reduce using rule 1 (program)


state 14

    2 exp: assignexp .

    $default  reduce using rule 2 (exp)


state 15

    4 assignexp: orexp .
    5 orexp: orexp . OR andexp

    OR  shift, and go to state 49

    OR        [reduce using rule 4 (assignexp)]
    $default  reduce using rule 4 (assignexp)


state 16

    6 orexp: andexp .
    7 andexp: andexp . AND relexp

    AND  shift, and go to state 50

    AND       [reduce using rule 6 (orexp)]
    $default  reduce using rule 6 (orexp)


state 17

    8 andexp: relexp .

    $default  reduce using rule 8 (andexp)


state 18

    9 relexp: addexp .
   10       | addexp . EQ addexp
   11       | addexp . NEQ addexp
   12       | addexp . LT addexp
   13       | addexp . LE addexp
   14       | addexp . GT addexp
   15       | addexp . GE addexp
   16 addexp: addexp . PLUS mulexp
   17       | addexp . MINUS mulexp

    PLUS   shift, and go to state 51
    MINUS  shift, and go to state 52
    EQ     shift, and go to state 53
    NEQ    shift, and go to state 54
    LT     shift, and go to state 55
    LE     shift, and go to state 56
    GT     shift, and go to state 57
    GE     shift, and go to state 58

    PLUS      [reduce using rule 9 (relexp)]
    MINUS     [reduce using rule 9 (relexp)]
    EQ        [reduce using rule 9 (relexp)]
    NEQ       [reduce using rule 9 (relexp)]
    LT        [reduce using rule 9 (relexp)]
    LE        [reduce using rule 9 (relexp)]
    GT        [reduce using rule 9 (relexp)]
    GE        [reduce using rule 9 (relexp)]
    $default  reduce using rule 9 (relexp)


state 19

   18 addexp: mulexp .
   19 mulexp: mulexp . TIMES unaryexp
   20       | mulexp . DIVIDE unaryexp

    TIMES   shift, and go to state 59
    DIVIDE  shift, and go to state 60

    TIMES     [reduce using rule 18 (addexp)]
    DIVIDE    [reduce using rule 18 (addexp)]
    $default  reduce using rule 18 (addexp)


state 20

   21 mulexp: unaryexp .

    $default  reduce using rule 21 (mulexp)


state 21

   23 unaryexp: atomexp .

    $default  reduce using rule 23 (unaryexp)


state 22

   29 atomexp: idexp .

    $default  reduce using rule 29 (atomexp)


state 23

    3 assignexp: lvalue . ASSIGN assignexp
   35 idexp: lvalue .

    ASSIGN  shift, and go to state 61

    $default  reduce using rule 35 (idexp)


state 24

   36 idexp: ID LPAREN . args_opt RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 47 (args_opt)

    exp        go to state 62
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23
    args_opt   go to state 63
    args       go to state 64


state 25

   38 idexp: ID LBRACK . exp RBRACK OF exp
   42 lvaluetail: LBRACK . exp RBRACK lvaluetail

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 65
    assignexp  go to state 14
    orexp      go to state 15
    andexp     go to state 16
    relexp     go to state 17
    addexp     go to state 18
    mulexp     go to state 19
    unaryexp   go to state 20
    atomexp    go to state 21
    idexp      go to state 22
    lvalue     go to state 23


state 26

   37 idexp: ID LBRACE . recfields_opt RBRACE

    ID  shift, and go to state 66

    $default  reduce using rule 51 (recfields_opt)

    recfields_opt  go to state 67
    recfields      go to state 68
    recfield       go to state 69


state 27

   41 lvaluetail: DOT . ID lvaluetail

    ID  shift, and go to state 70


state 28

   39 lvalue: ID lvaluetail .

    $default  reduce using rule 39 (lvalue)


state 29

   45 explist: exp .

    $default  reduce using rule 45 (explist)


state 30

   28 atomexp: LPAREN explist_opt . RPAREN

    RPAREN  shift, and go to state 71


state 31

   44 explist_opt: explist .
   46 explist: explist . SEMICOLON exp

    SEMICOLON  shift, and go to state 72

    $default  reduce using rule 44 (explist_opt)


state 32

   22 unaryexp: MINUS unaryexp .

    $default  reduce using rule 22 (unaryexp)


state 33

   35 idexp: lvalue .

    $default  reduce using rule 35 (idexp)


state 34

   30 atomexp: IF exp . THEN exp
   31        | IF exp . THEN exp ELSE exp

    THEN  shift, and go to state 73


state 35

   32 atomexp: WHILE exp . DO exp

    DO  shift, and go to state 74


state 36

   33 atomexp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 75


state 37

   70 fundec: FUNCTION . ID LPAREN tyfields_opt RPAREN EQ exp
   71       | FUNCTION . ID LPAREN tyfields_opt RPAREN COLON ID EQ exp

    ID  shift, and go to state 76


state 38

   68 vardec: VAR . ID ASSIGN exp
   69       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 77


state 39

   67 typedec: TYPE . ID EQ ty

    ID  shift, and go to state 78


state 40

   34 atomexp: LET decs_opt . IN explist_opt END

    IN  shift, and go to state 79


state 41

   57 decs_opt: decs .
   59 decs: decs . dec

    FUNCTION  shift, and go to state 37
    VAR       shift, and go to state 38
    TYPE      shift, and go to state 39

    $default  reduce using rule 57 (decs_opt)

    dec       go to state 80
    typedecs  go to state 43
    fundecs   go to state 44
    typedec   go to state 45
    vardec    go to state 46
    fundec    go to state 47


state 42

   58 decs: dec .

    $default  reduce using rule 58 (decs)


state 43

   60 dec: typedecs .

    $default  reduce using rule 60 (dec)


state 44

   62 dec: fundecs .

    $default  reduce using rule 62 (dec)


state 45

   63 typedecs: typedec .
   64         | typedec . typedecs

    TYPE  shift, and go to state 39

    TYPE      [reduce using rule 63 (typedecs)]
    $default  reduce using rule 63 (typedecs)

    typedecs  go to state 81
    typedec   go to state 45


state 46

   61 dec: vardec .

    $default  reduce using rule 61 (dec)


state 47

   65 fundecs: fundec .
   66        | fundec . fundecs

    FUNCTION  shift, and go to state 37

    FUNCTION  [reduce using rule 65 (fundecs)]
    $default  reduce using rule 65 (fundecs)

    fundecs  go to state 82
    fundec   go to state 47


state 48

    0 $accept: program $end .

    $default  accept


state 49

    5 orexp: orexp OR . andexp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    andexp    go to state 83
    relexp    go to state 17
    addexp    go to state 18
    mulexp    go to state 19
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22
    lvalue    go to state 33


state 50

    7 andexp: andexp AND . relexp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    relexp    go to state 84
    addexp    go to state 18
    mulexp    go to state 19
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22
    lvalue    go to state 33


state 51

   16 addexp: addexp PLUS . mulexp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    mulexp    go to state 85
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22
    lvalue    go to state 33


state 52

   17 addexp: addexp MINUS . mulexp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    mulexp    go to state 86
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22
    lvalue    go to state 33


state 53

   10 relexp: addexp EQ . addexp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    addexp    go to state 87
    mulexp    go to state 19
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22
    lvalue    go to state 33


state 54

   11 relexp: addexp NEQ . addexp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    addexp    go to state 88
    mulexp    go to state 19
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22
    lvalue    go to state 33


state 55

   12 relexp: addexp LT . addexp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    addexp    go to state 89
    mulexp    go to state 19
    unaryexp  go to state 20
    atomexp   go to state 21
    idexp     go to state 22
    lvalue    go to state 33


state 56

   13 relexp: addexp LE . addexp
